[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = "send news to discord channel"
authors = ["ironball"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discordwebhook = "^1.0.0"
requests = "^2.24.0"
tweepy = "^3.9.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
